--- a/monopalace/src/assets/sass/_base.scss
+++ b/monopalace/src/assets/sass/_base.scss
@@ -367,6 +367,10 @@ a.btn>* {
     font-weight: 700 !important;
 }
 
+.td-under {
+    text-decoration: underline !important;
+}
+
 .ta-center {
     text-align: center !important;
 }
