--- a/monopalace/src/assets/sass/m/_base.scss
+++ b/monopalace/src/assets/sass/m/_base.scss
@@ -380,6 +380,10 @@ a.btn>* {
     text-align: right !important;
 }
 
+.td-under {
+    text-decoration: underline !important;
+}
+
 .tt-up {
     text-transform: uppercase !important;
 }
