--- a/monopalace/src/assets/sass/landing/contents.min.scss
+++ b/monopalace/src/assets/sass/landing/contents.min.scss
@@ -3,13 +3,13 @@
 
 .sec.landing {
     .title-type1 {
-        margin-bottom: 15px;
+        margin-bottom: 30px;
         text-align: center;
     }
 
     .subtitle-type1 {
-        margin-bottom: 35px;
-        font-size: 25px;
+        margin-bottom: 40px;
+        font-size: 26px;
         // font-weight: 300;
         line-height: 1.2;
         text-align: center;
@@ -26,13 +26,15 @@
                     box-sizing: border-box;
                     text-align: center;
 
+                    h1+img {
+                        margin-top: -18px;
+                        margin-bottom: 15px;
+                    }
+
                     >img {
                         display: block;
                         margin: 0 auto;
 
-                        &:nth-child(3) {
-                            margin-top: 15px;
-                        }
                     }
                 }
 
@@ -135,13 +137,13 @@
     &.inquiry-place-sec {
         .place-wrapper {
             .place-content {
-                padding: 80px 0 100px;
+                padding: 0px 0 100px;
 
                 .subtext {
                     margin-top: 35px;
                     padding-left: 10px;
-                    padding-bottom: 35px;
-                    border-bottom: 2px solid #ccc;
+                    // padding-bottom: 35px;
+                    // border-bottom: 2px solid #ccc;
                     font-size: 30px;
                     line-height: 1.3;
                 }
@@ -152,7 +154,7 @@
     &.inquiry-premier-sec {
         .premier-wrapper {
             .premier-content {
-                padding: 20px 0 100px;
+                padding: 80px 0 100px;
 
                 .picture {
                     font-size: 0;
@@ -178,11 +180,22 @@
 
         // background-color: #191967;
         .sale-wrapper {
+            padding: 80px 0 100px;
+
             .sale-content {
-                padding: 80px 0 100px;
+
+                .subtitle {
+                    color: #ffffff;
+                    margin-top: 40px;
+                    margin-bottom: 0;
+                }
 
                 .picture {
                     position: relative;
+
+                    &+.picture {
+                        margin-top: 50px;
+                    }
                 }
 
                 .guarantee-btn {
@@ -201,22 +214,28 @@
                 }
             }
         }
-    }
 
-    &.inquiry-income-sec {
         .income-wrapper {
-            background-color: #fff8ea;
+            padding-top: 30px;
+            // margin-top: 135px;
+            // background-color: #fff8ea;
 
             .income-content {
-                padding: 80px 0 70px;
+                // padding: 80px 0 70px;
 
                 .title {
-                    margin-bottom: 25px;
+                    margin-bottom: 5px;
                 }
 
                 .subtitle {
                     font-size: 30px;
+                    color: #ffffff;
                     font-weight: 700;
+                    line-height: 1.4;
+
+                    .c-skyblue {
+                        color: #8ebbff;
+                    }
 
                     i {
                         display: inline-block;
@@ -228,11 +247,27 @@
                     display: flex;
                     justify-content: space-between;
                 }
+
+                .picture-2 {
+                    margin-top: 40px;
+                }
+
+                .subtext {
+                    margin-top: 40px;
+                    font-size: 20px;
+                    font-weight: 300;
+                    color: #ffffff;
+                    text-align: center;
+                }
+            }
+
+            .banner-wrapper {
+                margin-top: 100px;
+                background-color: #ffffff;
             }
 
             .banner-content {
-                padding: 25px 0;
-                background-color: #fff091;
+                padding: 35px 0 40px;
                 text-align: center;
                 line-height: 1.5;
 
@@ -341,7 +376,7 @@
                                 margin-top: 10px;
                                 font-size: 20px;
                                 line-height: 1.5;
-                                letter-spacing: -1px;
+                                letter-spacing: -1.2px;
                             }
                         }
 
@@ -444,19 +479,23 @@
                             margin-top: 25px;
                             font-size: 20px;
                             line-height: 1.3;
-                            letter-spacing: -1px;
+                            letter-spacing: -1.2px;
                         }
 
                         &.type2 {
                             .text {
                                 margin-top: 0;
                                 position: absolute;
-                                left: 0px;
+                                right: 0px;
                                 bottom: 0px;
                                 width: 100%;
-                                padding: 20px 50px;
+                                // padding: 20px 50px;
+                                width: 44%;
+                                height: 200px;
                                 box-sizing: border-box;
-                                background-color: rgba(255, 255, 255, 0.85);
+                                word-break: keep-all;
+                                // border: 1px solid #000;
+                                // background-color: rgba(255, 255, 255, 0.85);
                             }
                         }
                     }
