--- a/monopalace/src/assets/sass/m/landing/_common.scss
+++ b/monopalace/src/assets/sass/m/landing/_common.scss
@@ -6,9 +6,10 @@ $c-inquiry-brown: #b08f51;
 $c-inquiry-blue: #0046b7;
 // $c-inquiry-blue-dark: #182668;
 $c-inquiry-blue-dark: #0c0c68;
-$c-inquiry-red: #ec0000;
-$c-inquiry-red-dark: #c2063f;
+$c-inquiry-red: #ff3c45;
+$c-inquiry-red-dark: #df000b;
 $c-inquiry-purple: #cc0099;
+$c-inquiry-yellow: #ffdb49;
 
 body {
     font-family: $font-stack;
@@ -85,6 +86,10 @@ footer {
         color: $c-inquiry-purple !important;
     }
 
+    .c-yellow {
+        color: $c-inquiry-yellow !important;
+    }
+
     .landing-header {
         $line-ht: 6px;
         // $hd-ht-pc: 80px;
@@ -134,15 +139,15 @@ footer {
 
                 }
 
-                $nav-bar-ht: 45px;
+                $navbar-ht: 45px;
 
-                .nav-bar-wrapper {
-                    height: $nav-bar-ht;
+                .navbar-wrapper {
+                    height: $navbar-ht;
                 }
 
-                .nav-bar {
-                    $nav-bar-ht: 45px;
-                    height: $nav-bar-ht;
+                .navbar {
+                    $navbar-ht: 45px;
+                    height: $navbar-ht;
                     position: relative;
 
                     &.affix {
@@ -154,7 +159,7 @@ footer {
                     .main-nav {
                         position: relative;
                         width: 100%;
-                        height: $nav-bar-ht;
+                        height: $navbar-ht;
                         overflow-x: scroll;
                         background-color: #ffffff;
 
@@ -175,8 +180,8 @@ footer {
                                 >a {
                                     position: relative;
                                     display: block;
-                                    height: $nav-bar-ht;
-                                    line-height: $nav-bar-ht;
+                                    height: $navbar-ht;
+                                    line-height: $navbar-ht;
                                     font-weight: 700;
                                     letter-spacing: -1.5px;
                                 }
@@ -219,7 +224,7 @@ footer {
                         top: 0;
                         left: 0;
                         width: 100%;
-                        padding-bottom: 20px;
+                        padding-bottom: 25px;
                         background-color: #ffffff;
 
                         .menu-list {
@@ -234,7 +239,7 @@ footer {
                                 position: relative;
                                 margin: 0 8px;
                                 font-size: 14px;
-                                // line-height: $nav-bar-ht;
+                                // line-height: $navbar-ht;
                                 line-height: 2.2;
                                 font-weight: 700;
                                 letter-spacing: -1.5px;
@@ -404,7 +409,18 @@ footer {
         .top-btn-cover {
             display: block;
             width: 40px;
-            opacity: .8;
+
+            >a {
+                display: block;
+
+                &:not(:first-child) {
+                    margin-top: 5px;
+                }
+
+                &.top-btn {
+                    opacity: .8;
+                }
+            }
         }
     }
 
@@ -415,11 +431,11 @@ footer {
             display: initial;
             position: absolute;
             left: 50%;
-            margin-left: 610px;
+            // margin-left: 610px;
             // top: 162px;
             top: 50%;
-            transform: translateY(-50%);
-            margin-top: -48px;
+            transform: translate(-50%, -50%);
+            // margin-top: -48px;
         }
 
         .modal-container {
@@ -429,6 +445,7 @@ footer {
             box-sizing: border-box;
             border-radius: 10px;
             overflow: hidden;
+            font-size: 13px;
 
             .modal-header {
                 padding: 12px 0 10px;
@@ -452,7 +469,7 @@ footer {
 
                     label {
                         margin-bottom: 5px;
-                        font-size: 15px;
+                        font-size: 13px;
                         font-weight: 500;
                     }
 
@@ -460,6 +477,9 @@ footer {
                     .form-textarea {
                         background-color: #f5f5f5;
                         box-shadow: none;
+                        padding-left: 5px;
+                        padding-right: 5px;
+                        font-size: 13px;
                     }
 
                     .form-input::placeholder,
@@ -486,9 +506,9 @@ footer {
                 .inquiry-btn {
                     display: block;
                     width: 100%;
-                    height: 45px;
+                    height: 40px;
                     background-color: $c-inquiry-red-dark;
-                    font-size: 18px;
+                    font-size: 16px;
                     color: #ffffff;
                 }
 
@@ -503,11 +523,22 @@ footer {
                         vertical-align: middle;
                     }
 
-                    .x {
+                    .x-cover {
+                        display: inline-flex;
+                        align-items: center;
+                        justify-content: center;
                         background-color: #898989;
-                        color: #ffffff;
-                        font-size: 18px;
-                        font-weight: 100;
+                        width: 20px;
+                        height: 20px;
+
+                        .x {
+                            position: relative;
+                            top: -3px;
+                            color: #ffffff;
+                            font-size: 30px;
+                            font-weight: 100;
+                            line-height: 1;
+                        }
                     }
 
                     .txt {
