--- a/monopalace/src/assets/sass/m/landing/contents.min.scss
+++ b/monopalace/src/assets/sass/m/landing/contents.min.scss
@@ -14,14 +14,15 @@
 
     .subtitle-type1 {
         margin-bottom: 17px;
-        font-size: 14px;
+        font-size: 15px;
         // font-weight: 300;
-        line-height: 1.25;
+        // line-height: 1.25;
+        line-height: 1.35;
         text-align: center;
+        letter-spacing: -1px;
 
         @include screen-xxs {
             font-size: 13px !important;
-            letter-spacing: -0.7px;
         }
     }
 
@@ -172,8 +173,8 @@
                     // padding-bottom: 20px;
                     padding-left: 10px;
                     // border-bottom: 2px solid #ccc;
-                    font-size: 12.5px;
-                    line-height: 1.3;
+                    font-size: 13.5px;
+                    line-height: 1.4;
                     word-break: keep-all;
 
                     p:not(:first-child) {
@@ -391,6 +392,7 @@
                 background-color: #fff;
                 text-align: center;
                 line-height: 1.5;
+                letter-spacing: -1px;
 
                 p {
                     font-weight: 700;
@@ -642,14 +644,14 @@
                         position: relative;
 
                         &:not(.type2) {
-                            padding: 0px 35px;
+                            padding: 0px 25px;
                         }
 
                         .text {
                             margin-top: 12px;
-                            font-size: 13px;
-                            line-height: 1.3;
-                            letter-spacing: -1.2px;
+                            font-size: 14px;
+                            line-height: 1.4;
+                            letter-spacing: -1.7px;
                             word-break: keep-all;
                         }
 
@@ -660,7 +662,7 @@
 
                         &.type2 {
                             .text {
-                                padding: 0px 35px;
+                                padding: 0px 25px;
                             }
                         }
 
