--- a/monopalace/src/assets/sass/landing/contents.min.scss
+++ b/monopalace/src/assets/sass/landing/contents.min.scss
@@ -20,8 +20,9 @@
             .visual-content {
 
                 .banner {
-                    height: 715px;
-                    padding-top: 60px;
+                    // height: 715px;
+                    // padding-top: 60px;
+                    padding: 60px 0 40px;
                     background: url(http://img.monopalace.com/landing/inquiry/visual/bg.png) no-repeat center top / cover;
                     box-sizing: border-box;
                     text-align: center;
