--- a/monopalace/src/assets/sass/m/landing/contents.min.scss
+++ b/monopalace/src/assets/sass/m/landing/contents.min.scss
@@ -35,8 +35,8 @@
                     flex-wrap: wrap;
                     align-items: center;
                     justify-content: center;
-                    height: 460px;
-                    padding: 0 10px;
+                    // height: 460px;
+                    padding: 24px 10px;
                     // padding-top: 20px;
                     background: url(http://img.monopalace.com/m/landing/inquiry/visual/bg.png) no-repeat center top / cover;
                     box-sizing: border-box;
@@ -652,7 +652,7 @@
                             font-size: 14px;
                             line-height: 1.4;
                             letter-spacing: -1.7px;
-                            word-break: keep-all;
+                            // word-break: keep-all;
                         }
 
                         &:not(:first-child) {
